printscript-validator/src/test/resources/1.0/valid-statements/main.ps
let x: number
x = 5
let y: number = 6
println("Result: " + x + y)