printscript-validator/src/test/resources/1.0/invalid-type-assignation/main.ps
let x: number = "Hello, World!";
let y: number = 5;
y = "Goodbye, World!";